--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5,7 +5,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+body,
 #app {
   width: 100%;
   height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
 }
