--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -12,4 +11,5 @@ body,
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  color: var(--el-text-color-primary);
 }
