--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,10 +1,16 @@
 html {
+  --primary-background: #fafafa;
+  --primary-box-shadow: 0px 5px 15px 0px rgba(25, 25, 25, 0.1);
+
   --top-bar-bg: #fff;
   /* 字体选中颜色 */
   --text-color-active: #81b678;
 }
 
 html.dark {
+  --primary-background: #333;
+  --primary-box-shadow: 0px 5px 15px 0px rgba(225, 225, 225, 0.2);
+  
   --top-bar-bg: #333;
   --text-color-active: #c1ffb6;
 }
