--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,3 +14,22 @@ body,
   padding: 0;
   color: var(--el-text-color-primary);
 }
+
+/* 定义滚动条轨道 */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: var(--scrollbar-track-color);
+}
+
+/* 定义滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: var(--scrollbar-thumb-color);
+}
+
+/* 定义滚动条滑块:hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollbar-thumb-hover-color);
+}
