--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,4 +1,7 @@
 html {
+  /** 主题色 */
+  --theme-color: #469dc6;
+
   --primary-background: #fafafa;
   --primary-box-shadow: 0px 5px 15px 0px rgba(25, 25, 25, 0.1);
 
