--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5,14 +5,17 @@
 }
 
 body,
-#app {
+html {
   width: 100%;
   height: 100%;
-  min-width: 100vw;
-  min-height: 100vh;
   margin: 0;
   padding: 0;
   color: var(--el-text-color-primary);
+}
+
+#app {
+  width: 100%;
+  height: 100%;
 }
 
 /* 定义滚动条轨道 */
